--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,8 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/btn_bg_white"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <EditText
             android:layout_width="match_parent"
@@ -46,12 +47,43 @@
             android:hint="输入密码"
             android:paddingLeft="10dp" />
 
-        <Button
-            android:id="@+id/loginBtn"
-            style="@style/next_button"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="20dp"
-            android:text="登陆" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/loginBtn"
+        style="@style/next_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="140dp"
+        android:text="登陆" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:gravity="center_horizontal">
+
+        <View
+            android:layout_width="50dp"
+            android:layout_height="1dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/ededed" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:text="珠宝秒盘" />
+
+        <View
+            android:layout_width="50dp"
+            android:layout_height="1dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/ededed" />
     </LinearLayout>
 
 
