--- a/app/src/main/res/drawable/thumb_bg.xml
+++ b/app/src/main/res/drawable/thumb_bg.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval"
+    android:useLevel="false">
 
-</selector>
+    <solid android:color="@color/blu" />
+
+    <size
+        android:width="20dp"
+        android:height="20dp" />
+</shape>
