--- a/app/src/main/res/layout/activity_new_check.xml
+++ b/app/src/main/res/layout/activity_new_check.xml
@@ -59,7 +59,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_weight="2"
-                android:text="11111"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -84,7 +83,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_weight="2"
-                android:text="张三丰柜台"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -125,8 +123,7 @@
                     android:layout_width="wrap_content"
                     android:layout_marginEnd="45dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:text="柜台1，柜台2" />
+                    android:layout_marginStart="15dp" />
 
                 <ImageView
                     android:id="@+id/image"
