--- a/app/src/main/res/layout/activity_new_check.xml
+++ b/app/src/main/res/layout/activity_new_check.xml
@@ -39,7 +39,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
@@ -62,9 +62,11 @@
                 android:textSize="16sp" />
         </LinearLayout>
 
+        <View style="@style/line" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -86,9 +88,11 @@
                 android:textSize="16sp" />
         </LinearLayout>
 
+        <View style="@style/line" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_marginBottom="10dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
