--- a/app/src/main/res/layout/popupwindows_multiselect.xml
+++ b/app/src/main/res/layout/popupwindows_multiselect.xml
@@ -17,15 +17,17 @@
         <Button
             android:id="@+id/selectData"
             android:text="全选"
+            android:background="@drawable/btn_gray"
             android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="30dp" />
 
         <ListView
             android:id="@+id/listView_selector"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:divider="@null" />
 
