--- a/app/src/main/res/layout/popupwindows_multiselect.xml
+++ b/app/src/main/res/layout/popupwindows_multiselect.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_alignParentEnd="true"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentEnd="true">
 
     <LinearLayout
-        android:background="@drawable/btn_bg_white"
-        android:layout_alignParentEnd="true"
         android:id="@+id/linearLayout_selector"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:background="@drawable/btn_bg_white"
+        android:minWidth="180dp"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/selectData"
-            android:text="全选"
-            android:background="@drawable/btn_gray"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="30dp" />
+            android:layout_height="30dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/btn_gray"
+            android:text="全选" />
 
         <ListView
             android:id="@+id/listView_selector"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:divider="@null" />
 
     </LinearLayout>
