--- a/app/src/main/res/layout/activity_new_check.xml
+++ b/app/src/main/res/layout/activity_new_check.xml
@@ -5,148 +5,155 @@
     android:background="@android:color/white"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/title_bg">
-
-        <View
-            android:id="@+id/back"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:background="@drawable/ic_back" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="新建盘点"
-            android:textColor="@android:color/white"
-            android:textSize="18dp" />
-    </RelativeLayout>
-
     <LinearLayout
+        android:id="@+id/storeNameLly"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/btn_bg_white"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:background="@drawable/title_bg">
+
+            <View
+                android:id="@+id/back"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/ic_back" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="新建盘点"
+                android:textColor="@android:color/white"
+                android:textSize="18dp" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:background="@drawable/btn_bg_white"
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16sp"
-                android:layout_weight="1"
-                android:text="门店编号："
-                android:textColor="@color/color_gray_333333"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/shopCode"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_weight="2"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <View style="@style/line" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16sp"
-                android:layout_weight="1"
-                android:text="门        店："
-                android:textColor="@color/color_gray_333333"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/shopName"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_weight="2"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <View style="@style/line" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16sp"
-                android:layout_weight="1"
-                android:text="柜        台："
-                android:textColor="@color/color_gray_333333"
-                android:textSize="16sp" />
-
-            <com.jiafeng.codegun.customzie.NiceSpinner
-                android:id="@+id/nice_spinner"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="20dp"
-                android:layout_weight="2"
-                android:visibility="gone" />
-
-            <RelativeLayout
-                android:id="@+id/productType"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/storeTv"
-                    android:singleLine="true"
-                    android:ellipsize="end"
-                    android:layout_width="wrap_content"
-                    android:layout_marginEnd="45dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp" />
+                    android:layout_marginStart="16sp"
+                    android:layout_weight="1"
+                    android:text="门店编号："
+                    android:textColor="@color/color_gray_333333"
+                    android:textSize="16sp" />
 
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="30dp"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/shopCode"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/pull" />
-            </RelativeLayout>
+                    android:layout_marginStart="20dp"
+                    android:layout_weight="2"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <View style="@style/line" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16sp"
+                    android:layout_weight="1"
+                    android:text="门        店："
+                    android:textColor="@color/color_gray_333333"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/shopName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_weight="2"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <View style="@style/line" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16sp"
+                    android:layout_weight="1"
+                    android:text="柜        台："
+                    android:textColor="@color/color_gray_333333"
+                    android:textSize="16sp" />
+
+                <com.jiafeng.codegun.customzie.NiceSpinner
+                    android:id="@+id/nice_spinner"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="20dp"
+                    android:layout_weight="2"
+                    android:visibility="gone" />
+
+                <RelativeLayout
+                    android:id="@+id/productType"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2">
+
+                    <TextView
+                        android:id="@+id/storeTv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="45dp"
+                        android:layout_marginStart="15dp"
+                        android:ellipsize="end"
+                        android:singleLine="true" />
+
+                    <ImageView
+                        android:id="@+id/image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="30dp"
+                        android:src="@drawable/pull" />
+                </RelativeLayout>
+            </LinearLayout>
+
         </LinearLayout>
 
+        <Button
+            android:id="@+id/nextBtn"
+            style="@style/next_button"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="100dp"
+            android:text="下一步" />
+
     </LinearLayout>
-
-    <Button
-        android:id="@+id/nextBtn"
-        style="@style/next_button"
-        android:layout_gravity="bottom"
-        android:layout_marginTop="100dp"
-        android:text="下一步" />
-
 </LinearLayout>
