--- a/app/src/main/res/layout/item_check_detail.xml
+++ b/app/src/main/res/layout/item_check_detail.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
     android:layout_marginEnd="5dp"
+    android:minHeight="40dp"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/barCode"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_gravity="center"
         android:layout_margin="5dp"
         android:layout_weight="1"
+        android:gravity="center"
         android:text="条码号"
         android:textSize="16sp" />
 
@@ -20,10 +21,10 @@
         android:id="@+id/oldBarCode"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_gravity="center"
         android:layout_margin="5dp"
         android:layout_weight="1"
+        android:gravity="center"
         android:text="原条码"
         android:textSize="16sp" />
 
@@ -31,9 +32,9 @@
         android:id="@+id/goodsName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_gravity="center"
         android:layout_weight="1"
+        android:gravity="center"
         android:text="商品名称" />
 
 </LinearLayout>
