--- a/app/src/main/res/drawable/btn_bg.xml
+++ b/app/src/main/res/drawable/btn_bg.xml
@@ -2,12 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- 矩形的圆角弧度 -->
-    <corners android:radius="15dp" />
+    <corners android:radius="8dp" />
 
-    <gradient android:startColor="#003894"
-        android:angle="0"
-        android:centerY="50%"
-        android:centerX="50%"
-        android:endColor="#2456a9"/>
+    <!-- 渐变 -->
+    <!--<gradient android:startColor="#003894"-->
+    <!--android:angle="0"-->
+    <!--android:centerY="50%"-->
+    <!--android:centerX="50%"-->
+    <!--android:endColor="#2456a9"/>-->
 
+    <solid android:color="@color/text_bg" />
 </shape>
