--- a/app/src/main/res/drawable/title_bg.xml
+++ b/app/src/main/res/drawable/title_bg.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#003894"
+    <gradient android:startColor="#152997"
         android:angle="0"
         android:centerY="50%"
-
         android:centerX="50%"
-        android:endColor="#2456a9"/>
+        android:endColor="#3a68f1"/>
 
 </shape>
