--- a/app/src/main/res/layout/activity_check_list.xml
+++ b/app/src/main/res/layout/activity_check_list.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/allbg"
+    android:orientation="vertical"
     tools:context="com.jiafeng.codegun.view.MainActivity">
 
     <RelativeLayout
@@ -18,8 +17,8 @@
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:gravity="center_vertical"
             android:layout_marginStart="15dp"
+            android:gravity="center_vertical"
             android:text="注销"
             android:textColor="@android:color/white"
             android:textSize="18dp" />
@@ -36,23 +35,23 @@
         <TextView
             android:id="@+id/createTv"
             android:layout_width="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:gravity="center_vertical"
             android:layout_marginEnd="20dp"
             android:drawableLeft="@drawable/add"
+            android:gravity="center_vertical"
             android:textColor="@android:color/white"
             android:textSize="18dp" />
     </RelativeLayout>
 
     <LinearLayout
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginEnd="5dp"
         android:layout_marginTop="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="0dp"
@@ -95,20 +94,16 @@
             android:textSize="16sp" />
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <com.jiafeng.codegun.refresh.TwinklingRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp">
 
-    <com.melnykov.fab.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="20dp"
-        android:src="@drawable/ic_edit"
-        android:visibility="gone"
-        fab:fab_colorPressed="@color/colorPrimaryDark" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
+    </com.jiafeng.codegun.refresh.TwinklingRefreshLayout>
 </FrameLayout>
