--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,9 +53,10 @@
         android:id="@+id/loginBtn"
         style="@style/next_button"
         android:layout_alignParentBottom="true"
+        android:background="@drawable/btn_bg_blue"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="140dp"
-        android:text="登陆" />
+        android:text="登  录" />
 
     <LinearLayout
         android:layout_width="match_parent"
