--- a/app/src/main/res/layout/activity_new_check.xml
+++ b/app/src/main/res/layout/activity_new_check.xml
@@ -40,13 +40,14 @@
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/btn_bg_white"
+            android:background="@drawable/background"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="55dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -72,7 +73,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="10dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -98,7 +100,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginBottom="10dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
