--- a/app/src/main/res/layout/activity_scan_chengwei.xml
+++ b/app/src/main/res/layout/activity_scan_chengwei.xml
@@ -36,8 +36,7 @@
         android:layout_gravity="center"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/btn_bg_white"
+        android:background="@drawable/background"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
@@ -46,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:padding="5dp"
+            android:layout_marginTop="20dp"
             android:text="@string/all_epc_sum"
             android:textColor="@color/color_gray_333333"
             android:textSize="18sp" />
@@ -65,13 +65,14 @@
 
         <LinearLayout
             android:id="@+id/checkId"
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:padding="5dp"
                 android:text="单     号："
                 android:textColor="@color/color_gray_333333"
@@ -88,14 +89,14 @@
 
         <LinearLayout
             android:id="@+id/shop"
+            android:padding="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:padding="5dp"
                 android:text="门     店："
                 android:textColor="@color/color_gray_333333"
@@ -111,14 +112,14 @@
         <View style="@style/line" />
 
         <LinearLayout
+            android:padding="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:padding="5dp"
                 android:text="柜     台："
                 android:textColor="@color/color_gray_333333"
@@ -135,15 +136,16 @@
 
         <RelativeLayout
             android:id="@+id/distanceRly"
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="20dp">
 
             <TextView
                 android:id="@+id/tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:padding="5dp"
                 android:text="范     围："
                 android:textColor="@color/color_gray_333333"
@@ -152,7 +154,7 @@
            <com.jiafeng.codegun.customzie.seekbar.BubbleSeekBar
                android:id="@+id/seekbar"
                android:layout_width="200dp"
-               android:layout_height="22dp"
+               android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tv"
                app:bsb_second_track_color="@color/text_color"
@@ -163,11 +165,12 @@
 
             <TextView
                 android:id="@+id/nameTv"
+                android:textSize="15sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="30dp"
+                android:layout_marginEnd="20dp"
                 android:text="30" />
         </RelativeLayout>
     </LinearLayout>
