--- a/app/src/main/res/layout/item_list_selector.xml
+++ b/app/src/main/res/layout/item_list_selector.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relativeLayout_search"
     android:layout_width="match_parent"
-    android:padding="5dp"
-    android:layout_height="30dp">
+    android:layout_height="30dp"
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/image_search_check"
@@ -16,9 +16,9 @@
         android:id="@+id/textView_listView_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_alignStart="@+id/image_search_check"
+        android:layout_marginStart="20dp"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="20dp"
         android:text="商品类型"
         android:textColor="@color/color_gray_333333"
         android:textSize="16sp" />
